# neuro-symbolic-policy-engine

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: BACKLOG.md  case-study.md
docs/adrs/: 0001-symbolic-engine-choice.md  0002-judgment-rail-constrained-decoding.md  0003-scope-synthetic-hero-scenario.md  0004-eval-driven-acceptance.md
evals/: BRIEF.md  README.md  _framework.py  run_evals.py
evals/adversarial/: a01_confident_wrong_vs_fact.yaml  a02_prompt_injection_in_content.py  a03_ambiguous_judgment.yaml  a04_trajectory_composition.py
evals/behavioral/: b01_clean_allow.yaml  b02_fact_violation_dual_role.yaml  b03_per_clause_binding.py  b04_trace_shape.py  b05_no_exploitation_escalates.yaml
examples/: run_examples.py
examples/cases/: 01_clean_allow.yaml  02_fact_violation_dual_role.yaml  05_no_exploitation_violation.yaml
src/nspk/: __init__.py  api.py  types.py
src/nspk/adapters/: base.py  synthetic.py
src/nspk/engine/: __init__.py  evaluator.py
src/nspk/judgments/: __init__.py  no_exploitation.py  suitability.py
src/nspk/policies/: wealth_management.yaml
src/nspk/rails/: fact_rail.py  judgment_rail.py  llm_client.py
tests/: conftest.py
tests/unit/: test_fact_rail_determinism.py  test_importability.py  test_judgment_claim_well_typed.py  test_no_exploitation_well_typed.py
