[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nspk"
version = "0.1.0"
description = "Neuro-symbolic policy kernel — a research demonstrator: deterministic fact rail + LLM judgment rail emitting typed claims + a symbolic engine that renders verdicts with full evidence traces."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Jason Stanley" }]
requires-python = ">=3.11"
keywords = ["policy", "governance", "neuro-symbolic", "ai-safety", "agents", "structured-outputs"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "anthropic>=0.40",
]

[project.optional-dependencies]
demo = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "jinja2>=3.1",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nspk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "live: hits the real Anthropic API (skipped by default; opt in with -m live)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]
